--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,6 +12,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.22",
+    "classnames": "^2.3.1",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "prettier": "^2.5.1",
@@ -50,7 +52,6 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
-
     "tailwindcss": "^3.0.22"
   }
 }
